--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "维修sop系统",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.20260215.001",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "recharts": "^3.6.0",
     "lucide-react": "^0.562.0",
+    "mssql": "^12.2.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
